--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ button.copy {
     height: 20em;
     resize: vertical;
     font-size: 16px;
+    font-family: "Consolas", "Menlo", monospace;
 }
 
 
